# AI-context-gap-tracker

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_COMPLETION_SUMMARY.md  README.md  TODO.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
cmd/: main.go
docs/: API.md  DEPLOYMENT.md  MCP_SERVER_SETUP.md
examples/: example_usage.go
internal/config/: config.go
internal/contexttracker/: contexttracker.go
internal/database/: database.go
internal/logicengine/: logicengine.go
internal/promptrewriter/: promptrewriter.go
internal/responseauditor/: responseauditor.go
internal/server/: server.go
mcp-server/: Dockerfile  main.py  requirements.txt
mcp_server/: __init__.py  main.py
pkg/redis/: redis.go
python-nlp/: Dockerfile  main.py  requirements.txt
scripts/: test_mcp_server.py  test_mcp_structure.py  test_system.sh  validate_mcp_final.py
